# optical-distortion-correction

./: Application.cpp  CMakeLists.txt  MainFrame.cpp  MainFrame.h  README.md
src/: Application.cpp  Application.h  ControlPanel.cpp  ControlPanel.h  DistortionEngine.cpp  DistortionEngine.h  Element.cpp  Element.h  ImagePanel.cpp  ImagePanel.h  MainFrame.cpp  MainFrame.h  MenuBar.cpp  MenuBar.h  Page.cpp  Page.h
